--- a/src/styles/Deployed.css
+++ b/src/styles/Deployed.css
@@ -1,8 +1,47 @@
-.section {
-  background: #f3e5f5;
-  padding: 20px;
+main {
+  margin: 30px;
+  display: flex;
+  gap: 50px;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
 }
 
-.section h2 {
+.application {
+  display: flex;
+  flex-flow: column nowrap;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: stretch;
+  border: 5px ridge #dee2ff;
+  border-radius: 5px;
+  width: 40vw;
+  height: 50vh;
   text-align: center;
+  box-shadow: 3px 3px 10px 0px #677791;
+  margin: 20px;
+  background-color: #dee2ff;
+}
+
+section iframe {
+  border: 0;
+  border-bottom: 5px ridge #dee2ff;
+  margin-right: 10px;
+  width: 100%;
+  height: 100%;
+}
+
+.page-description {
+  margin: 10px;
+
+  height: fit-content;
+  font-size: large;
+}
+.pagelink,
+.repolink {
+  position: relative;
+  margin: 0 10px 10px 0;
+  bottom: -2px;
+  color: #020d13;
+  border-radius: 5px;
+  padding: 3px;
 }
